log
Wed 08 May 2024 07:40:18 PM UTC: 
 tests:  1|8
total_score: 0/70
23eff18
Wed 08 May 2024 07:41:18 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|8
total_score: 0/70
08b8169
Wed 08 May 2024 07:42:15 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
12a2f7b
Wed 08 May 2024 07:43:32 PM UTC: 
 treemap.c | 67 +++++++++++++++++++++++++++++++--------------------------------
 1 file changed, 33 insertions(+), 34 deletions(-)
In file included from test.c:4:
treemap.c:68:45: error: expected ‘;’, ‘,’ or ‘)’ before ‘{’ token
   68 | Pair *searchTreeMap(TreeMap *tree, void *key{
      |                                             ^
Compilation failed
4439f78
Wed 08 May 2024 07:43:41 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
d31fc9d
Wed 08 May 2024 08:03:55 PM UTC: 
 treemap.c | 76 +++++++++++++++++++++++++++++++++++++++++----------------------
 1 file changed, 50 insertions(+), 26 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccHO6sRb.o: in function `search_test1':
test.c:(.text+0x506): undefined reference to `searchTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccHO6sRb.o: in function `search_test2':
test.c:(.text+0x5a6): undefined reference to `searchTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccHO6sRb.o: in function `search_test3':
test.c:(.text+0x657): undefined reference to `searchTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccHO6sRb.o: in function `search_test4':
test.c:(.text+0x723): undefined reference to `searchTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccHO6sRb.o: in function `erase_test1':
test.c:(.text+0xa5a): undefined reference to `eraseTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccHO6sRb.o: in function `erase_test2':
test.c:(.text+0xaea): undefined reference to `eraseTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccHO6sRb.o: in function `erase_test3':
test.c:(.text+0xb9a): undefined reference to `eraseTreeMap'
collect2: error: ld returned 1 exit status
Compilation failed
45751a3
